# DocScanner

./: README.md  代码深度分析.md
DocScanner/: CMakeLists.txt  configmanager.cpp  configmanager.h  documentscanner.cpp  documentscanner.h  interactiveview.cpp  interactiveview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
